--- a/client/420.html
+++ b/client/420.html
@@ -16,7 +16,18 @@
 	<div id="whale">
 		<img src="http://sierraclub.typepad.com/photos/uncategorized/2008/04/29/singing_whale_thumbnail.jpg" alt="Voice fail whale" width="80%"/>
 	</div>
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-38125637-1');
+        ga('send', 'pageview');
+
+    </script>
+    <!-- End Google Analytics -->
 </body>
 
 </html>
