local pusher.js file + gitignore

--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@ mixpanel.init("6abcaa7a57cead5fa4f142cc94091c4c");</script><!-- end Mixpanel -->
       </footer>
     </div>
     
-    <script src="http://js.pusher.com/1.11/pusher.min.js"></script>
+    <script src="assets/vendor/pusher/pusher.js"></script>
     <script src="assets/vendor/d3.v2/d3.v2.js"></script>
     <script src="assets/js/main.js"></script>
     
